--- a/src/SimpleBlog.Infrastructure/SimpleBlog.Infrastructure.csproj
+++ b/src/SimpleBlog.Infrastructure/SimpleBlog.Infrastructure.csproj
@@ -1,29 +1,27 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
     <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
   </ItemGroup>
-  
 
   <ItemGroup>
+    <Folder Include="Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
-  
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleBlog.Application\SimpleBlog.Application.csproj" />
-    <ProjectReference Include="..\SimpleBlog.Infrastructure\SimpleBlog.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
