--- a/src/SimpleBlog.IdentityServer/Properties/launchSettings.json
+++ b/src/SimpleBlog.IdentityServer/Properties/launchSettings.json
@@ -7,7 +7,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7230;http://localhost:5277"
+      "applicationUrl": "https://localhost:7230;http://localhost:5277",
+      "sqlDebugging": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
